docs(ci): add local validation path for workflow without running docker image builds